--- a/SpaceshipGame/SpaceshipGame.vcxproj
+++ b/SpaceshipGame/SpaceshipGame.vcxproj
@@ -80,8 +80,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\scjk9\Downloads\DirectXTex-main\DirectXTex-main\DirectXTex;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\scjk9\Downloads\DirectXTex-main\DirectXTex-main\DirectXTex\Bin\Desktop_2019_Win10\x64\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\SpaceshipGame\SpaceshipGame\DirectXTex;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\SpaceshipGame\SpaceshipGame\DirectXTex\Bin\Desktop_2019_Win10\x64\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
