edit UI to CPU, FPS, Timer and Change SystemClass to Singleton class

--- a/SpaceshipGame/imgui.ini
+++ b/SpaceshipGame/imgui.ini
@@ -36,9 +36,13 @@ Size=350,150
 
 [Window][테스트2]
 Pos=10,170
-Size=855,144
+Size=350,150
 
 [Window][테스트3]
 Pos=10,330
+Size=350,150
+
+[Window][FPS, CPU, Timer]
+Pos=10,10
 Size=350,150
 
